[metadata]
name = NixChecker
version = attr: nixchecker.__version__
description = Fact check news articles
long_description = file: README.md
url = https://github.com/dnouri/NixChecker-
classifiers =
    Programming Language :: Python :: 3
author = Daniel Nouri
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    click
    goose3
    llm

[options.entry_points]
console_scripts =
    nixchecker = nixchecker.cli:cli

[options.extras_require]
devel =
    black==24.1.1
    pytest
    pytest-cov
    python-dotenv
    ruff==0.2.1

[tool:pytest]
addopts =
    -v
    --tb=short
    --cov=nixchecker
    --doctest-modules
testpaths =
    tests
markers =
    slow: mark test as slow.

[coverage:run]
branch = True
source = nixchecker/
